2003-12-23  Choe Hwanjin <krisna@kldp.org>
	* src/server.h,src/server.c,src/automata.c: backspace정보를 통계 정보
	  구조체에 남기는 코드의 버그를 해결

2003-12-20  Choe Hwanjin <krisna@kldp.org>
	* src/nabi.h,src/session.h,src/session.c,src/ui.c,src/main.c:
	  세션 기능을 구현, 세션저장만 하면 다음번에 제대로 다시 뜨게함,
	  또 프로그램이 죽게되면 자동으로 다시 띄우도록 기본값을 줌

2003-12-18  Choe Hwanjin <krisna@kldp.org>
	* release 0.12

2003-12-16  Choe Hwanjin <krisna@kldp.org>
	* src/ic.c: PreeditCallback 방식의 preedit style을 Underline에서 
	  Reverse로 바꿈
	  트레이 아이콘이 사라지면서 죽던 문제 수정

2003-12-15  Choe Hwanjin <krisna@kldp.org>
	* src/ui.c: icon의 크기를 좀더 똑똑하게 처리
	  메뉴의 위치를 마우스가 아닌 아이콘 위치 기준으로 설정

2003-12-14  Choe Hwanjin <krisna@kldp.org>
	* src/server.h,src/server.c: iconv를 직접 쓰지 않고 g_iconv를 사용
	* icon들 업데이트 (김석진님에게 감사드립니다)

2003-12-09  Choe Hwanjin  <krisna@people.kldp.org>
	* configure.in,
	  themes/MSWindows2000/Makefile.am,
	  themes/MSWindows2000/english.png,
	  themes/MSWindows2000/hangul.png,
	  themes/MSWindows2000/none.png,
	  themes/Makefile.am: MSWindows2000 테마 추가

2003-12-05  Choe Hwanjin  <krisna@people.kldp.org>
	* src/handler.c, src/ic.c, src/ic.h: add utf8_to_compound_text() func.
	  do not commit on ICReset, just send last preedit string

2003-12-03  Choe Hwanjin  <krisna@people.kldp.org>
	* src/ic.c:
	  PreeditPosition에서 preedit window를 spot location보다 한픽셀 뒤로 밂
	  (커서위치를 보이게 하기 위함)

2003-12-02  Choe Hwanjin  <krisna@people.kldp.org>
	* src/ic.c:
	    set overide-redirect to show preedit window correctly on Qt app

2003-11-29  Choe Hwanjin  <krisna@people.kldp.org>
	* po/ko.po: update po
	* ChangeLog: update ChangeLog
	* src/ui.c: set dialog variable to NULL when about window closed
	* src/ui.c: about window가 하나만 뜨게 함

	* release 0.11

2003-11-28  Choe Hwanjin  <krisna@people.kldp.org>
	* src/ic.c, src/server.c, src/server.h: gc를 ic별로 관리하는 대신
	  server에 기본 gc를 하나 만들고 그걸 사용하도록 함
	* AUTHORS, NEWS, TODO: 문서 업데이트
	* configure.in: prepare for version up
	* po/ko.po: 번역 업데이트