@@ -621,6 +621,7 @@ static void GetIMValueFromName (Xi18n i18n_core,
             /*endfor*/
             memmove (buf, data, total_size);
             FrameMgrFree (fm);
+	    free(data);
         }
         /*endif*/
     }
